--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "alpha-chat-app",
+  "description": "A real-time chat application built with React and TypeScript.",
+  "author": "Your Name",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "format": "prettier --write .",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -28,6 +34,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "prettier": "^3.0.0",
+    "jest": "^29.0.0"
   }
 }
